--- a/complex_boundary.ipynb
+++ b/complex_boundary.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOyZmPYCsSIAdPmglPJkTi0",
+      "authorship_tag": "ABX9TyPCA3U45p5bGCvH1ugRquI3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 115,
       "metadata": {
         "id": "N3V1NktmGaYj"
       },
@@ -45,13 +45,29 @@
       "source": [
         "x=housing.data\n",
         "y=housing.target\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "x.shape"
       ],
       "metadata": {
-        "id": "j64ufXhSIYxP"
+        "id": "j64ufXhSIYxP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0f148784-721e-46e1-914f-6c6099ede71f"
       },
-      "execution_count": 52,
-      "outputs": []
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(20640, 8)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 116
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -64,9 +80,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7Wc_BXNhGo4N",
-        "outputId": "fad80da5-24a5-45fe-b218-aaeba01cd342"
+        "outputId": "3ae2ff68-b0d6-451e-ecfe-865b90de9d62"
       },
-      "execution_count": 62,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -83,7 +99,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 117
         }
       ]
     },
@@ -91,266 +107,29 @@
       "cell_type": "code",
       "source": [
         "df.columns=housing.feature_names\n",
-        "df[\"popul**2\"]=df.Population**2\n",
-        "df[\"latitude***2\"]=df.Latitude**2\n",
-        "df.describe()"
+        "df[\"popul**2\"]=df.Population**3\n",
+        "df.describe()\n",
+        "x2=df.values  \n",
+        "x2.shape"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 300
+          "base_uri": "https://localhost:8080/"
         },
         "id": "_gvTCtyBJRB2",
-        "outputId": "c5d15cc0-db58-4dde-a339-ccfce57f9422"
+        "outputId": "c80785c9-1021-4036-861d-76deb07bf951"
       },
-      "execution_count": 63,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "             MedInc      HouseAge      AveRooms     AveBedrms    Population  \\\n",
-              "count  20640.000000  20640.000000  20640.000000  20640.000000  20640.000000   \n",
-              "mean       3.870671     28.639486      5.429000      1.096675   1425.476744   \n",
-              "std        1.899822     12.585558      2.474173      0.473911   1132.462122   \n",
-              "min        0.499900      1.000000      0.846154      0.333333      3.000000   \n",
-              "25%        2.563400     18.000000      4.440716      1.006079    787.000000   \n",
-              "50%        3.534800     29.000000      5.229129      1.048780   1166.000000   \n",
-              "75%        4.743250     37.000000      6.052381      1.099526   1725.000000   \n",
-              "max       15.000100     52.000000    141.909091     34.066667  35682.000000   \n",
-              "\n",
-              "           AveOccup      Latitude     Longitude      popul**2  latitude***2  \n",
-              "count  20640.000000  20640.000000  20640.000000  2.064000e+04  20640.000000  \n",
-              "mean       3.070655     35.631861   -119.569704  3.314392e+06   1274.191621  \n",
-              "std       10.386050      2.135952      2.003532  1.324852e+07    154.386369  \n",
-              "min        0.692308     32.540000   -124.350000  9.000000e+00   1058.851600  \n",
-              "25%        2.429741     33.930000   -121.800000  6.193690e+05   1151.244900  \n",
-              "50%        2.818116     34.260000   -118.490000  1.359556e+06   1173.747600  \n",
-              "75%        3.282261     37.710000   -118.010000  2.975625e+06   1422.044100  \n",
-              "max     1243.333333     41.950000   -114.310000  1.273205e+09   1759.802500  "
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-aa80e31d-7e28-4fec-bb56-263f345657cc\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>MedInc</th>\n",
-              "      <th>HouseAge</th>\n",
-              "      <th>AveRooms</th>\n",
-              "      <th>AveBedrms</th>\n",
-              "      <th>Population</th>\n",
-              "      <th>AveOccup</th>\n",
-              "      <th>Latitude</th>\n",
-              "      <th>Longitude</th>\n",
-              "      <th>popul**2</th>\n",
-              "      <th>latitude***2</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>count</th>\n",
-              "      <td>20640.000000</td>\n",
-              "      <td>20640.000000</td>\n",
-              "      <td>20640.000000</td>\n",
-              "      <td>20640.000000</td>\n",
-              "      <td>20640.000000</td>\n",
-              "      <td>20640.000000</td>\n",
-              "      <td>20640.000000</td>\n",
-              "      <td>20640.000000</td>\n",
-              "      <td>2.064000e+04</td>\n",
-              "      <td>20640.000000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>mean</th>\n",
-              "      <td>3.870671</td>\n",
-              "      <td>28.639486</td>\n",
-              "      <td>5.429000</td>\n",
-              "      <td>1.096675</td>\n",
-              "      <td>1425.476744</td>\n",
-              "      <td>3.070655</td>\n",
-              "      <td>35.631861</td>\n",
-              "      <td>-119.569704</td>\n",
-              "      <td>3.314392e+06</td>\n",
-              "      <td>1274.191621</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>std</th>\n",
-              "      <td>1.899822</td>\n",
-              "      <td>12.585558</td>\n",
-              "      <td>2.474173</td>\n",
-              "      <td>0.473911</td>\n",
-              "      <td>1132.462122</td>\n",
-              "      <td>10.386050</td>\n",
-              "      <td>2.135952</td>\n",
-              "      <td>2.003532</td>\n",
-              "      <td>1.324852e+07</td>\n",
-              "      <td>154.386369</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>min</th>\n",
-              "      <td>0.499900</td>\n",
-              "      <td>1.000000</td>\n",
-              "      <td>0.846154</td>\n",
-              "      <td>0.333333</td>\n",
-              "      <td>3.000000</td>\n",
-              "      <td>0.692308</td>\n",
-              "      <td>32.540000</td>\n",
-              "      <td>-124.350000</td>\n",
-              "      <td>9.000000e+00</td>\n",
-              "      <td>1058.851600</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>25%</th>\n",
-              "      <td>2.563400</td>\n",
-              "      <td>18.000000</td>\n",
-              "      <td>4.440716</td>\n",
-              "      <td>1.006079</td>\n",
-              "      <td>787.000000</td>\n",
-              "      <td>2.429741</td>\n",
-              "      <td>33.930000</td>\n",
-              "      <td>-121.800000</td>\n",
-              "      <td>6.193690e+05</td>\n",
-              "      <td>1151.244900</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>50%</th>\n",
-              "      <td>3.534800</td>\n",
-              "      <td>29.000000</td>\n",
-              "      <td>5.229129</td>\n",
-              "      <td>1.048780</td>\n",
-              "      <td>1166.000000</td>\n",
-              "      <td>2.818116</td>\n",
-              "      <td>34.260000</td>\n",
-              "      <td>-118.490000</td>\n",
-              "      <td>1.359556e+06</td>\n",
-              "      <td>1173.747600</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>75%</th>\n",
-              "      <td>4.743250</td>\n",
-              "      <td>37.000000</td>\n",
-              "      <td>6.052381</td>\n",
-              "      <td>1.099526</td>\n",
-              "      <td>1725.000000</td>\n",
-              "      <td>3.282261</td>\n",
-              "      <td>37.710000</td>\n",
-              "      <td>-118.010000</td>\n",
-              "      <td>2.975625e+06</td>\n",
-              "      <td>1422.044100</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>max</th>\n",
-              "      <td>15.000100</td>\n",
-              "      <td>52.000000</td>\n",
-              "      <td>141.909091</td>\n",
-              "      <td>34.066667</td>\n",
-              "      <td>35682.000000</td>\n",
-              "      <td>1243.333333</td>\n",
-              "      <td>41.950000</td>\n",
-              "      <td>-114.310000</td>\n",
-              "      <td>1.273205e+09</td>\n",
-              "      <td>1759.802500</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aa80e31d-7e28-4fec-bb56-263f345657cc')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-aa80e31d-7e28-4fec-bb56-263f345657cc button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-aa80e31d-7e28-4fec-bb56-263f345657cc');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
+              "(20640, 9)"
             ]
           },
           "metadata": {},
-          "execution_count": 63
+          "execution_count": 118
         }
       ]
     },
@@ -358,12 +137,13 @@
       "cell_type": "code",
       "source": [
         "from sklearn import model_selection\n",
-        "xtrain,xtest,ytrain,ytest=model_selection.train_test_split(x,y)"
+        "xtrain,xtest,ytrain,ytest=model_selection.train_test_split(x,y,random_state=0)\n",
+        "x2train,x2test,y2train,y2test=model_selection.train_test_split(x2,y,random_state=0)"
       ],
       "metadata": {
         "id": "cIaWSCeTKGjK"
       },
-      "execution_count": 64,
+      "execution_count": 119,
       "outputs": []
     },
     {
@@ -375,43 +155,34 @@
         "ypred=alg1.predict(xtest)\n",
         "testscore=alg1.score(xtest,ytest)\n",
         "trainscore=alg1.score(xtrain,ytrain)\n",
-        "print(\"testscore , trainscore \",testscore,trainscore)\n"
+        "print(\"testscore , trainscore \",testscore,trainscore)\n",
+        "\n",
+        "\n",
+        "alg2=LinearRegression()\n",
+        "alg2.fit(x2train,y2train)\n",
+        "y2pred=alg2.predict(x2test)\n",
+        "testscore1=alg2.score(x2test,y2test)\n",
+        "trainscore1=alg2.score(x2train,y2train)\n",
+        "print(\"testscore2 , trainscore2 \",testscore1,trainscore1)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VrWxnsKbJ024",
-        "outputId": "020b5372-a744-4a39-a414-27ad3919e3ff"
+        "outputId": "1be2ed32-472b-4369-d9c9-d21bbbea96e1"
       },
-      "execution_count": 65,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "testscore , trainscore  0.6047697397623083 0.6065624745142966\n"
+            "testscore , trainscore  0.5911695436410479 0.6109633715458154\n",
+            "testscore2 , trainscore2  0.5911532054634471 0.6109673936873805\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "testscore , trainscore without adding new feature  0.6068026905107256 0.6058798502343246"
-      ],
-      "metadata": {
-        "id": "W9M1uG4JMEd9"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "testscore , trainscore by adding population **2         0.5880454263453798 0.6121542164076448"
-      ],
-      "metadata": {
-        "id": "XufJqaomMWGx"
-      }
     }
   ]
 }
