--- a/Copy_of_data_preprocessing_tools.ipynb
+++ b/Copy_of_data_preprocessing_tools.ipynb
@@ -41,7 +41,7 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -61,13 +61,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "262ab29d-a63e-42ac-8ec9-c53962a0943a"
+        "outputId": "5da896e4-8d87-4b3a-e3a0-eed08cbd7f9a"
       },
       "source": [
         "dataset = pd.read_csv('Data.csv')\n",
         "dataset"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -87,7 +87,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-110c9926-5aa0-408a-9ea1-a62ba7af9b95\">\n",
+              "  <div id=\"df-406c8e1b-5814-433d-a8a3-340f9570e704\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -187,7 +187,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-110c9926-5aa0-408a-9ea1-a62ba7af9b95')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-406c8e1b-5814-433d-a8a3-340f9570e704')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -238,12 +238,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-110c9926-5aa0-408a-9ea1-a62ba7af9b95 button.colab-df-convert');\n",
+              "          document.querySelector('#df-406c8e1b-5814-433d-a8a3-340f9570e704 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-110c9926-5aa0-408a-9ea1-a62ba7af9b95');\n",
+              "          const element = document.querySelector('#df-406c8e1b-5814-433d-a8a3-340f9570e704');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -266,7 +266,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 8
         }
       ]
     },
@@ -288,12 +288,12 @@
       ],
       "metadata": {
         "id": "Fhs5pM7bOZ69",
-        "outputId": "b13d4e0a-af79-4f13-c9c9-ec4802e1ca5e",
+        "outputId": "0377eeee-609c-4b58-ba8d-3946153958d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,7 +336,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 536
         },
-        "outputId": "0303aa2b-4a2f-4ae4-9cd0-270f8296aeb1"
+        "outputId": "fc6d98ae-d5f8-4ed7-d863-9cd6a28b8b0d"
       },
       "source": [
         "X = dataset.iloc[:, :-1].values\n",
@@ -344,7 +344,7 @@
         "print(X)\n",
         "dataset\n"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,7 +380,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-96ca02f8-f739-4ad0-b3b6-02ec4a30140a\">\n",
+              "  <div id=\"df-f6a0ca52-f5f3-47a1-8d05-e01e409a0b4c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -480,7 +480,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-96ca02f8-f739-4ad0-b3b6-02ec4a30140a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f6a0ca52-f5f3-47a1-8d05-e01e409a0b4c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -531,12 +531,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-96ca02f8-f739-4ad0-b3b6-02ec4a30140a button.colab-df-convert');\n",
+              "          document.querySelector('#df-f6a0ca52-f5f3-47a1-8d05-e01e409a0b4c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-96ca02f8-f739-4ad0-b3b6-02ec4a30140a');\n",
+              "          const element = document.querySelector('#df-f6a0ca52-f5f3-47a1-8d05-e01e409a0b4c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -559,7 +559,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 10
         }
       ]
     },
@@ -584,7 +584,7 @@
       "metadata": {
         "id": "baOHRPq1VS7P"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -638,12 +638,12 @@
       ],
       "metadata": {
         "id": "5_vAT1asYB7s",
-        "outputId": "a8a6cc1f-ebc5-47bb-fdef-a71ab95b48e0",
+        "outputId": "fec4eccf-252b-4f3e-c28f-b3e7547cfaaa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,7 +672,7 @@
       "metadata": {
         "id": "4IDpXmd8YU_X"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -695,30 +695,62 @@
         "X_train = sc.fit_transform(X_train)\n",
         "X_test = sc.transform(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DWPET8ZdlMnu"
+        "id": "DWPET8ZdlMnu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "95b22c45-ec9d-4aad-efa0-0084b16b6710"
       },
       "source": [
         "print(X_train)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-0.77459667 -0.57735027  1.29099445 -0.19159184 -1.07812594]\n",
+            " [-0.77459667  1.73205081 -0.77459667 -0.01411729 -0.07013168]\n",
+            " [ 1.29099445 -0.57735027 -0.77459667  0.56670851  0.63356243]\n",
+            " [-0.77459667 -0.57735027  1.29099445 -0.30453019 -0.30786617]\n",
+            " [-0.77459667 -0.57735027  1.29099445 -1.90180114 -1.42046362]\n",
+            " [ 1.29099445 -0.57735027 -0.77459667  1.14753431  1.23265336]\n",
+            " [-0.77459667  1.73205081 -0.77459667  1.43794721  1.57499104]\n",
+            " [ 1.29099445 -0.57735027 -0.77459667 -0.74014954 -0.56461943]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sTXykB_QlRjE"
+        "id": "sTXykB_QlRjE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "747705f2-9dfd-412a-a56b-16367daa1d11"
       },
       "source": [
         "print(X_test)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-0.77459667  1.73205081 -0.77459667 -1.46618179 -0.9069571 ]\n",
+            " [ 1.29099445 -0.57735027 -0.77459667 -0.44973664  0.20564034]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
