--- a/Copy_of_data_preprocessing_tools.ipynb
+++ b/Copy_of_data_preprocessing_tools.ipynb
@@ -41,7 +41,7 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd"
       ],
-      "execution_count": 3,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -61,13 +61,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "5da896e4-8d87-4b3a-e3a0-eed08cbd7f9a"
+        "outputId": "02d91ae7-004d-4d34-a1a3-e0ae6644d989"
       },
       "source": [
         "dataset = pd.read_csv('Data.csv')\n",
         "dataset"
       ],
-      "execution_count": 8,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -87,7 +87,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-406c8e1b-5814-433d-a8a3-340f9570e704\">\n",
+              "  <div id=\"df-9dd8a47d-beb8-4038-90f6-b32d4fee4a23\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -187,7 +187,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-406c8e1b-5814-433d-a8a3-340f9570e704')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9dd8a47d-beb8-4038-90f6-b32d4fee4a23')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -238,12 +238,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-406c8e1b-5814-433d-a8a3-340f9570e704 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9dd8a47d-beb8-4038-90f6-b32d4fee4a23 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-406c8e1b-5814-433d-a8a3-340f9570e704');\n",
+              "          const element = document.querySelector('#df-9dd8a47d-beb8-4038-90f6-b32d4fee4a23');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -266,7 +266,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 28
         }
       ]
     },
@@ -288,12 +288,12 @@
       ],
       "metadata": {
         "id": "Fhs5pM7bOZ69",
-        "outputId": "0377eeee-609c-4b58-ba8d-3946153958d5",
+        "outputId": "c61d5fbe-fc24-4d4a-cd3e-1f6be49296f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +325,7 @@
         "# imputer.fit(X[:, 1:3])\n",
         "# X[:, 1:3] = imputer.transform(X[:, 1:3])"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -336,7 +336,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 536
         },
-        "outputId": "fc6d98ae-d5f8-4ed7-d863-9cd6a28b8b0d"
+        "outputId": "74cb73fb-f4ff-4d99-e544-b71e394fadbd"
       },
       "source": [
         "X = dataset.iloc[:, :-1].values\n",
@@ -344,7 +344,7 @@
         "print(X)\n",
         "dataset\n"
       ],
-      "execution_count": 10,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,7 +380,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f6a0ca52-f5f3-47a1-8d05-e01e409a0b4c\">\n",
+              "  <div id=\"df-5958bd13-2265-433f-913a-5b5863225f25\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -480,7 +480,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f6a0ca52-f5f3-47a1-8d05-e01e409a0b4c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5958bd13-2265-433f-913a-5b5863225f25')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -531,12 +531,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f6a0ca52-f5f3-47a1-8d05-e01e409a0b4c button.colab-df-convert');\n",
+              "          document.querySelector('#df-5958bd13-2265-433f-913a-5b5863225f25 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f6a0ca52-f5f3-47a1-8d05-e01e409a0b4c');\n",
+              "          const element = document.querySelector('#df-5958bd13-2265-433f-913a-5b5863225f25');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -559,7 +559,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 31
         }
       ]
     },
@@ -584,7 +584,7 @@
       "metadata": {
         "id": "baOHRPq1VS7P"
       },
-      "execution_count": 11,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -643,7 +643,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,7 +672,7 @@
       "metadata": {
         "id": "4IDpXmd8YU_X"
       },
-      "execution_count": 13,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -692,10 +692,10 @@
       "source": [
         "from sklearn.preprocessing import StandardScaler\n",
         "sc = StandardScaler()\n",
-        "X_train = sc.fit_transform(X_train)\n",
-        "X_test = sc.transform(X_test)"
+        "X_train[:,3:] = sc.fit_transform(X_train[:,3:])\n",
+        "X_test[:,3:] = sc.transform(X_test[:,3:])"
       ],
-      "execution_count": 14,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -705,25 +705,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "95b22c45-ec9d-4aad-efa0-0084b16b6710"
+        "outputId": "a9357ab7-b9a4-4b1d-c35f-866486b90e7b"
       },
       "source": [
         "print(X_train)"
       ],
-      "execution_count": 20,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[-0.77459667 -0.57735027  1.29099445 -0.19159184 -1.07812594]\n",
-            " [-0.77459667  1.73205081 -0.77459667 -0.01411729 -0.07013168]\n",
-            " [ 1.29099445 -0.57735027 -0.77459667  0.56670851  0.63356243]\n",
-            " [-0.77459667 -0.57735027  1.29099445 -0.30453019 -0.30786617]\n",
-            " [-0.77459667 -0.57735027  1.29099445 -1.90180114 -1.42046362]\n",
-            " [ 1.29099445 -0.57735027 -0.77459667  1.14753431  1.23265336]\n",
-            " [-0.77459667  1.73205081 -0.77459667  1.43794721  1.57499104]\n",
-            " [ 1.29099445 -0.57735027 -0.77459667 -0.74014954 -0.56461943]]\n"
+            "[[0.0 0.0 1.0 -0.19159184384578545 -1.0781259408412425]\n",
+            " [0.0 1.0 0.0 -0.014117293757057777 -0.07013167641635372]\n",
+            " [1.0 0.0 0.0 0.566708506533324 0.633562432710455]\n",
+            " [0.0 0.0 1.0 -0.30453019390224867 -0.30786617274297867]\n",
+            " [0.0 0.0 1.0 -1.9018011447007988 -1.420463615551582]\n",
+            " [1.0 0.0 0.0 1.1475343068237058 1.232653363453549]\n",
+            " [0.0 1.0 0.0 1.4379472069688968 1.5749910381638885]\n",
+            " [1.0 0.0 0.0 -0.7401495441200351 -0.5646194287757332]]\n"
           ]
         }
       ]
@@ -735,19 +735,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "747705f2-9dfd-412a-a56b-16367daa1d11"
+        "outputId": "ceadbc67-a2c6-487f-9915-9d154dbde21f"
       },
       "source": [
         "print(X_test)"
       ],
-      "execution_count": 21,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[-0.77459667  1.73205081 -0.77459667 -1.46618179 -0.9069571 ]\n",
-            " [ 1.29099445 -0.57735027 -0.77459667 -0.44973664  0.20564034]]\n"
+            "[[0.0 1.0 0.0 -1.4661817944830124 -0.9069571034860727]\n",
+            " [1.0 0.0 0.0 -0.44973664397484414 0.2056403393225306]]\n"
           ]
         }
       ]
